final_tile_verification.log
============================= test session starts ==============================
platform linux -- Python 3.12.12, pytest-9.0.2, pluggy-1.6.0
PyQt6 6.10.2 -- Qt runtime 6.10.2 -- Qt compiled 6.10.0
benchmark: 5.2.3 (defaults: timer=time.perf_counter disable_gc=False min_rounds=5 min_time=0.000005 max_time=1.0 calibration_precision=10 warmup=False warmup_iterations=100000)
rootdir: /app
configfile: pyproject.toml
plugins: cov-7.0.0, qt-4.5.0, benchmark-5.2.3
collected 0 items / 1 error

==================================== ERRORS ====================================
_ ERROR collecting py_rme_canary/tests/unit/core/protocols/test_tile_serializer.py _
/home/jules/.pyenv/versions/3.12.12/lib/python3.12/site-packages/_pytest/python.py:507: in importtestmodule
    mod = import_path(
/home/jules/.pyenv/versions/3.12.12/lib/python3.12/site-packages/_pytest/pathlib.py:587: in import_path
    importlib.import_module(module_name)
/home/jules/.pyenv/versions/3.12.12/lib/python3.12/importlib/__init__.py:90: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1387: in _gcd_import
    ???
<frozen importlib._bootstrap>:1360: in _find_and_load
    ???
<frozen importlib._bootstrap>:1331: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:935: in _load_unlocked
    ???
/home/jules/.pyenv/versions/3.12.12/lib/python3.12/site-packages/_pytest/assertion/rewrite.py:188: in exec_module
    source_stat, co = _rewrite_test(fn, self.config)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
/home/jules/.pyenv/versions/3.12.12/lib/python3.12/site-packages/_pytest/assertion/rewrite.py:357: in _rewrite_test
    tree = ast.parse(source, filename=strfn)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
/home/jules/.pyenv/versions/3.12.12/lib/python3.12/ast.py:52: in parse
    return compile(source, filename, mode, flags,
E     File "/app/py_rme_canary/tests/unit/core/protocols/test_tile_serializer.py", line 30
E       assert decoded["flags"] == 3
E   IndentationError: unexpected indent
=========================== short test summary info ============================
ERROR py_rme_canary/tests/unit/core/protocols/test_tile_serializer.py
!!!!!!!!!!!!!!!!!!!! Interrupted: 1 error during collection !!!!!!!!!!!!!!!!!!!!
=============================== 1 error in 0.40s ===============================
